# gnome-clipboard-history

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  clipboard-history.pot  confirmDialog.js  dataStructures.js  extension.js  metadata.json  package-lock.json  prefs.js  settingsFields.js  store.js  stylesheet.css  utils.js
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md
.github/workflows/: ci.yml
locale/ar/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/ca/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/cs/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/de/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/el/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/es/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/eu/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/fa/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/fi/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/fr/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/fr_FR/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/hu/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/it/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/ja/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/nl/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/oc/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/pl/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
locale/ru/LC_MESSAGES/: clipboard-history@alexsaveau.dev.po
schemas/: gschemas.compiled  org.gnome.shell.extensions.clipboard-indicator.gschema.xml
tools/: Cargo.toml  lint.sh  rustfmt.toml
tools/src/: main.rs
tools/tests/: tidy.rs
(+5 files in other folders)
