[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
clap-num = "1.0.2"
dirs = "5.0.1"
error-stack = "0.4.1"
memchr = "2.6.4"
memmap2 = "0.9.0"
rand = { version = "0.8.5", default-features = false }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
