[package]
name = "tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.16", features = ["derive", "wrap_help"] }
clap-num = "1.0.2"
clap-verbosity-flag2 = "2.1.1"
dirs = "5.0.1"
error-stack = "0.4.1"
memchr = "2.7.1"
memmap2 = "0.9.3"
rand = { version = "0.8.5", default-features = false }
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"

[dev-dependencies]
supercilex-tests = { version = "0.4.4", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
